Update title and heading in chosenroute.html

--- a/chosenroute.html
+++ b/chosenroute.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>מסלול ירח דבש – תאילנד – 26 לילות (המסלול המעודכן)</title>
+    <title>מסלול ירח דבש – תאילנד – 26 לילות</title>
     <style>
       /* הגדרות עיצוב בסיסיות */
       :root {
@@ -229,7 +229,7 @@
   </head>
   <body>
     <div class="wrap">
-      <h1>💖 מסלול 1: מאוזן ומעודכן (26 לילות)</h1>
+      <h1>מסלול 1: מאוזן - 26 לילות</h1>
       <div class="subtitle">
         המסלול מותאם לטיסה ישירה לצ׳יאנג מאי (02 ינואר) ושמירה על 3 לילות
         בבנגקוק בסוף.
