--- a/chosenroute.html
+++ b/chosenroute.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>מסלול ירח דבש – תאילנד – 26 לילות</title>
+    <title>מסלול ירח דבש – תאילנד – 25 לילות (המסלול המעודכן)</title>
     <style>
       /* הגדרות עיצוב בסיסיות */
       :root {
@@ -229,9 +230,9 @@
   </head>
   <body>
     <div class="wrap">
-      <h1>מסלול 1: מאוזן - 26 לילות</h1>
+      <h1>💖 מסלול 1: מאוזן ומעודכן (25 לילות)</h1>
       <div class="subtitle">
-        המסלול מותאם לטיסה ישירה לצ׳יאנג מאי (02 ינואר) ושמירה על 3 לילות
+        המסלול מותאם לטיסה ישירה לצ׳יאנג מאי (02 ינואר) ושמירה על 2 לילות
         בבנגקוק בסוף.
       </div>
 
@@ -314,14 +315,14 @@
               <span class="dot i3"></span>
               <div>
                 <div class="title">
-                  בנגקוק | סיום <span class="nights">3 לילות</span>
+                  בנגקוק | סיום <span class="nights">2 לילות</span>
                 </div>
                 <div class="desc">סיום בבנגקוק עם עוגנים תרבותיים וקניות.</div>
               </div>
             </li>
           </ul>
           <div class="summary">
-            סה"כ לילות: <span class="total-nights">26</span>
+            סה"כ לילות: <span class="total-nights">25</span>
           </div>
         </section>
       </div>
@@ -478,7 +479,7 @@
           ],
         },
         "בנגקוק-סיום": {
-          title: "בנגקוק (סיום הטיול - 3 לילות)",
+          title: "בנגקוק (סיום הטיול - 2 לילות)",
           days: [
             {
               type: "עוגן",
@@ -488,20 +489,15 @@
             },
             {
               type: "עוגן",
-              range: "יום 26 (תרבות)",
+              range: "יום 26 (תרבות/קניות)",
               activities:
-                "בוקר: ארמון המלך ומקדש וואט פו. צהריים: קניוני יוקרה.",
+                "בוקר: ארמון המלך ומקדש וואט פו. צהריים/ערב: קניוני יוקרה וקניות אחרונות.",
             },
             {
               type: "ספונטני",
-              range: "יום 27 (קניות)",
+              range: "יום 27 (חזרה)",
               activities:
-                "שוק סוף השבוע צ׳טוצ׳ק (קניות מזכרות ואוכל רחוב). או מוזיאון/גלריה.",
-            },
-            {
-              type: "ספונטני",
-              range: "יום 28 (חזרה)",
-              activities: "יום אחרון, קניות אחרונות וטיסה חזרה לישראל ב-16:30.",
+                "יום אחרון (חצי יום): קניות אחרונות (מזכרות) ואוכל רחוב, וטיסה חזרה לישראל ב-16:30.",
             },
           ],
         },
